--- a/index_lagecy.html
+++ b/index_lagecy.html
@@ -49,114 +49,49 @@
     </div>
 
     <script>
-        // Define your learning pages here in the desired learning flow order
+        // Define your learning pages here
         // For each page, specify:
         // - title: Display title of the module
         // - description: A brief description
         // - link: The filename of the HTML page
         // - icon: An optional icon (e.g., emoji for simplicity, or Font Awesome class)
-        // - type: 'tutorial' or 'quiz' for icon selection
         const pages = [
-            // 基礎資料型態 (Basic Data Types)
             {
                 title: "字串 (String) 教學",
                 description: "深入了解 Python 字串的建立、索引、切片和各種操作方法。",
-                link: "str.html",
-                type: "tutorial"
+                link: "str.html", // Assuming your string tutorial is str.html
+                icon: "📚" // 統一為學習圖示
             },
             {
                 title: "字串 (String) 遊戲化測驗",
                 description: "透過遊戲化測驗，練習並鞏固您對 Python 字串的理解。",
-                link: "str_test.html",
-                type: "quiz"
-            },
-            {
-                title: "清單 (List) 教學",
-                description: "全面掌握 Python 清單的建立、存取、修改和常用方法。",
-                link: "list.html",
-                type: "tutorial"
-            },
-            {
-                title: "清單 (List) 遊戲化測驗",
-                description: "透過互動式測驗，檢視您對 Python 清單操作的掌握程度。",
-                link: "list_game.html",
-                type: "quiz"
+                link: "str_test.html", // Assuming your string quiz is str_test.html
+                icon: "🎮" // 統一為測驗圖示
             },
             {
                 title: "字典 (Dictionary) 教學",
                 description: "全面掌握 Python 字典的建立、存取、修改和常用方法。",
-                link: "dictionary.html",
-                type: "tutorial"
+                link: "dictionary.html", // Assuming your dictionary tutorial is dictionary.html
+                icon: "📚" // 統一為學習圖示
             },
             {
                 title: "字典 (Dictionary) 遊戲化測驗",
                 description: "透過互動式測驗，檢視您對 Python 字典操作的掌握程度。",
-                link: "dictionary_game.html",
-                type: "quiz"
-            },
-            // 流程控制 (Flow Control)
-            {
-                title: "流程控制 (Flow Control) 教學",
-                description: "學習如何讓程式碼根據條件做出決策，重複執行任務。",
-                link: "flow_control.html",
-                type: "tutorial"
-            },
-            {
-                title: "流程控制 (Flow Control) 遊戲化測驗",
-                description: "挑戰您的條件判斷和迴圈知識。",
-                link: "flow_control_game.html",
-                type: "quiz"
-            },
-            // 函式 (Functions)
-            {
-                title: "自定義函式 (Custom Functions) 教學",
-                description: "組織程式碼、提高可重用性與可讀性。",
-                link: "def_func.html",
-                type: "tutorial"
-            },
-            {
-                title: "自定義函式 (Custom Functions) 遊戲化測驗",
-                description: "透過測驗鞏固對函式定義、參數、回傳值和作用域的理解。",
-                link: "def_func_game.html",
-                type: "quiz"
-            },
-            // 內建函式 (Built-in Functions)
-            {
-                title: "初階內建函式 (Beginner Built-in Functions) 教學",
-                description: "程式碼的基礎構建模組：學習常用的基本內建函式。",
-                link: "built-in_func_basic.html",
-                type: "tutorial"
-            },
-            {
-                title: "初階內建函式 (Beginner Built-in Functions) 遊戲化測驗",
-                description: "練習並掌握 Python 中最常用的基本內建函式。",
-                link: "built-in_func_basic_game.html",
-                type: "quiz"
-            },
-            {
-                title: "進階內建函式 (Advanced Built-in Functions) 教學",
-                description: "深入理解 Python 語言的強大功能：探索更複雜的內建函式。",
-                link: "built-in_func_advance.html",
-                type: "tutorial"
-            },
-            {
-                title: "進階內建函式 (Advanced Built-in Functions) 遊戲化測驗",
-                description: "挑戰您對 Python 進階內建函式的理解和應用。",
-                link: "built-in_func_advance_game.html",
-                type: "quiz"
+                link: "dictionary_game.html", // Assuming your dictionary quiz is dictionary_game.html
+                icon: "🎮" // 統一為測驗圖示
             }
             // Add more pages here as you create them:
             // {
-            //     title: "模組 (Modules) 教學",
-            //     description: "學習如何組織和重用程式碼。",
-            //     link: "modules.html",
-            //     type: "tutorial"
+            //     title: "列表 (List) 教學",
+            //     description: "學習 Python 列表的基礎和進階操作。",
+            //     link: "list.html",
+            //     icon: "📚" // 學習圖示
             // },
             // {
-            //     title: "錯誤處理 (Error Handling) 測驗",
-            //     description: "測試您處理程式碼錯誤的能力。",
-            //     link: "error_handling_quiz.html",
-            //     type: "quiz"
+            //     title: "流程控制 (Flow Control) 測驗",
+            //     description: "挑戰您的條件判斷和迴圈知識。",
+            //     link: "flow_control_quiz.html",
+            //     icon: "🎮" // 測驗圖示
             // }
         ];
 
@@ -173,15 +108,8 @@
                     'ease-in-out', 'transform', 'hover:scale-105', 'hover:shadow-xl'
                 );
 
-                let icon = '';
-                if (page.type === 'tutorial') {
-                    icon = '📚'; // 學習圖示
-                } else if (page.type === 'quiz') {
-                    icon = '🎮'; // 測驗圖示
-                }
-
                 card.innerHTML = `
-                    <div class="text-5xl mb-4">${icon}</div>
+                    <div class="text-5xl mb-4">${page.icon}</div>
                     <h3 class="text-2xl font-bold text-gray-800 mb-3">${page.title}</h3>
                     <p class="text-gray-600 mb-5 flex-grow">${page.description}</p>
                     <a href="${page.link}" class="mt-auto w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 ease-in-out focus:outline-none focus:ring-4 focus:ring-blue-300">
